Update home.html updated note

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,8 +52,8 @@ font-weight: bold;
   <code>2.</code> Enter your details in the required sections or leave all the job to us as our software will search your <code>linkedin-profile</code> to autofill all the required information<br>
  <code>3.</code> Wait for some time while the <code>magic</code> happens in the background <br> 
  <code>4.</code> Download 3 designs of resume in <code>docx</code> format to edit your  resume any further if needed<br><br><br>
- <code><strong>Note -</strong></code> Before clicking the checkbox to retrieve required info from your <code>linkedin profile</code>. Please ensure that information field exists on your profile </p>
-
+ <code><strong>Note -</strong></code> Before clicking the checkbox to retrieve required info from your <code>linkedin profile</code>. Please ensure that information field exists on your profile
+<br>Also we currently only support GoogleChrome as the browser,Please install it and run the app on chrome only
 
 
 
